objects/test_obj__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <fields>
        <fullName>test_number_2__c</fullName>
        <label>test number 2</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>test_number__c</fullName>
        <label>test number</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>testedith__c</fullName>
        <defaultValue>false</defaultValue>
        <label>testedith</label>
        <type>Checkbox</type>
    </fields>
    <label>test_obj</label>
</CustomObject>